--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.4",
     "d3": "^5.16.0",
     "firebase": "^7.14.2",
+    "iconv-lite": "^0.5.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
