--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3": "^5.16.0",
     "firebase": "^7.14.2",
     "iconv-lite": "^0.5.1",
+    "spin.js": "^4.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
@@ -25,7 +26,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
